--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     restart: on-failure
     volumes:
       - ./submissionscript/:/submissionscript/
+      - ./test/:/test/
     depends_on:
       mysql_db_container:
         condition: service_healthy
